<?xml version="1.0"?>
<package format="2">
  <name>testpackagecpp</name>
  <version>0.4.0</version>
  <description>Package containing examples of how to use the rcl API.</description>
  <maintainer email="ahcorde@erlerobot.org">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>
<!--  <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

<!--  <depend>message_package</depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  

<!--  <run_depend>roscpp</run_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
